Add eclipse plugin
Add an eclipse plugin that will apply provide the formatter and
configure project specific settings.

Closes gh-2